# Project-Packaging-Python-ML

./: .gitignore  README.MD  pyproject.toml  run.py
iris_classifier/: __init__.py  data.py  model.py  utils.py
iris_classifier.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_model.py
