# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "iris_classifier"
version = "0.1.0"
authors = [
  { name = "Mohammadreza Mohammadi", email = "mr.mhmdi93@gmail.com" },
]
description = "A Random Forest classifier for the Iris dataset"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "scikit-learn>=1.0.0",
  "pandas>=1.3.0",
  "numpy>=1.21.0",
  "joblib>=1.0.0"
]
license = { file = "LICENSE" }

[project.urls]
"Homepage" = "https://github.com/mohammadreza-mohammadi94"